--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
 include README.md requirements.txt LICENSE
 
-recursive-include petlja_sphinx_extensions/extensions theme.conf *.html *.mo
+recursive-include petlja_sphinx_extensions/extensions *.js *.css *.svg *.png
